test/compile-fail/main__ret_type_string.he
fn main : string //~ ERROR 3001
{
    ret 0;
}
